feat: Reporte financiera udistrital/resoluciones_cliente_v2#143
